<resources>
    <string name="app_name">微糖商城</string>
    <string name="action_settings">Settings</string>
    <string name="check_net">请检查网络亲~</string>
    <string name="app_xieyi">《微糖商城用户协议》</string>
    <string name="app_xieyi1">用户协议</string>
    <string name="network_not_connected">网络连接失败，请检查网络设置</string>
    <string name="xml_parser_failed">数据解析异常</string>
    <string name="io_exception_error">文件流异常</string>
    <string name="http_status_code_error">网络异常，错误码：%d</string>
    <string name="http_exception_error">网络异常，请求超时</string>
    <string name="socket_exception_error">网络异常，读取数据超时</string>
    <string name="app_run_code_error">应用程序运行时异常</string>
    <string name="app_error">应用程序错误</string>
    <string name="app_error_message">很抱歉，应用程序出现错误，即将退出。\n请提交错误报告，我们会尽快修复这个问题！</string>
    <string name="submit_report">提交报告</string>
    <string name="net_error_tip">网络已断开请设置网络</string>
    <string name="nullstr">--</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>
    <string name="hello">Hello World, JPush!</string>
    <string name="tag_hint">Tag为大小写字母，数字，下划线,中文， 多个用以逗号分隔</string>
    <string name="alias_hint">Alias为大小写字母，数字，下划线</string>
    <string name="style_hint">style为数字</string>
    <string name="error_style_empty">style不能为空</string>
    <string name="error_alias_empty">alias不能为空</string>
    <string name="error_tag_empty">tag不能为空</string>
    <string name="error_tag_gs_empty">格式不对</string>
    <string name="error_network">网络连接异常,初始化失败 请检查网络！</string>
    <string name="logining">程序在后台执行, 请查看日志！</string>
    <string name="setting_su">设置成功</string>
    <string name="take_photo">拍照</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_last_time">上次更新时间:</string>
    <string name="xlistview_footer_hint_ready">查看更多</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">加载中···</string>
    <string name="loading">加载中·····</string>
    <string name="searching">搜索中·····</string>
    <string name="edgoodloading">编辑中·····</string>
    <string name="home_souso">搜索微糖商品/店铺</string>
    <string name="dataerror">数据异常</string>
    <string name="sure">确定</string>
    <string name="cancle">取消</string>
    <string name="sousou">搜索</string>
    <string name="tab_home">首页</string>
    <string name="tab_shop">店铺</string>
    <string name="tab_show">SHOW</string>
    <string name="tab_shopbus">购物车</string>
    <string name="tab_center">我的</string>
    <string name="test">一男子在闹市骑摩托撞昏了一个陌生的老汉！ 男子惊吓的不知所措！围观群众越来越多！突然，该男抱住老汉，声泪俱下的喊道：“爹，你等着我，我这就去给你找医生！”说后，就跑掉了。。。老汉挣扎着愤怒的喊道：“给老子回来！”众人纷纷感慨：“这儿子当的真孝顺！”</string>
    <string name="lijijiesuan">立即购买</string>
    <string name="addbus">加入购物车</string>
    <string name="shop_tody_incom">今日收入</string>
    <string name="shop_tody_number">今日销量</string>
    <string name="shop_tody_inverstor">今日访客</string>
    <string name="shop_all_income">累计收入</string>
    <string name="shop_tuandui_num">团队人数</string>
    <string name="shop_tuandui_inf">团队信息</string>
    <string name="shop_xiaji_num">下级人数</string>
    <string name="grad1">发布商品</string>
    <string name="grad2">订单管理</string>
    <string name="grad3">渠道管理</string>
    <string name="grad4">采购订单</string>
    <string name="grad5">品牌代理</string>
    <string name="grad6">商品管理</string>
    <string name="grad7">销售统计</string>
    <string name="grad8">店铺预览</string>
    <string name="grad9">我要合作</string>
    <string name="sousou_hint">搜索微糖商品/店铺</string>
    <string name="sousou_shop_hint">搜索微糖店铺</string>
    <string name="sousou_remen">热门商品</string>
    <string name="sousou_history">历史搜索</string>
    <string name="shop_sousou">搜索店铺</string>
    <string name="sousou_shopnei_hint">搜索店铺内商品</string>
    <string name="brand_detail_title_txt">品牌详情</string>
    <string name="brand_detail_apply">申请代理</string>
    <string name="shop_oder_manger">订单管理</string>
    <string name="shop_oder_purchase">采购订单</string>
    <string name="shop_oder_channel">渠道管理</string>
    <string name="shop_oder_brand_daili">品牌代理</string>
    <string name="shop_oder_add_good">发布商品</string>
    <string name="shop_good_manger">商品管理</string>
    <string name="be_junior">成为下级</string>
    <string name="develop_junior">发展下级</string>
    <string name="invite_superior">发展上级</string>
    <string name="invite_record">发展记录</string>
    <string name="this_week_sales">本周销量</string>
    <string name="this_week_goods_in">本周进货量</string>
    <string name="my_superior">我的上级</string>
    <string name="my_junior">我的下级</string>
    <string name="shuru_initor_code">请输入被邀请人手机号</string>
    <string name="dingxian">定向邀请</string>
    <string name="bushuruerweimawei">(不输入生成二维码为非定向邀请二维码)</string>
    <string name="toerweima">生成二维码</string>
    <string name="yaoqingshangji_yaoqing">请填写上级信息</string>
    <string name="dailipinpai">代理品牌</string>
    <string name="yaoiqng">邀请</string>
    <string name="chanle_t_name">请填写姓名</string>
    <string name="chanle_t_phone">请填写手机号</string>
    <string name="chanle_t_brand">请填写品牌名</string>
    <string name="chanle_t_teamnumber">请填写团队数</string>
    <string name="chanle_t_teamnuminf">请填写团队信息</string>
    <string name="tijiaochengg">提交成功</string>
    <string name="phone_right">请填写正确手机号</string>
    <string name="camera_open_notice">您已经开启了灯光！</string>
    <string name="camera_close_notice">您已经关闭了灯光！</string>
    <string name="camera_problem">抱歉，您相机出现问题。您可能需要重启设备。</string>
    <string name="framwork_problem">二维码扫描暂时出现问题。您重启再试。</string>
    <string name="msg_share_subject_line">这是我所扫描条码的内容</string>
    <string name="msg_default_mms_subject">Hi</string>
    <string name="msg_intent_failed">抱歉，无法打开所需软件。 条码内容可能无效。</string>
    <string name="button_ok">确定</string>
    <string name="result_uri">网址路径</string>
    <string name="button_1">浏览器打开</string>
    <string name="button_2">内容</string>
    <string name="button_3">其它标题</string>
    <string name="result_title_default">网址路径</string>
    <string name="qrcode_notice">将二维码放入框内，即可自动扫描。</string>
    <string name="openorclose_light">打开或关闭灯光</string>
    <string name="qrcode_empty"></string>
    <string name="qrcode_open">用浏览器打开</string>
    <string name="paramete_error">参数正确，请重新扫描</string>
    <string name="select_branding_business_txt">请选择品牌商</string>
    <string name="select_level_txt">请选择级别</string>
    <string name="zhifubao">支付宝</string>
    <string name="yinhangka">银行卡</string>
    <string name="center_show">SHOW圈</string>
    <string name="center_oder">我的订单</string>
    <string name="center_yaoqingma">我的邀请码</string>
    <string name="center_wallet">我的钱包</string>
    <string name="center_kaquan">我的卡券</string>
    <string name="center_good_guanzhu">商品关注</string>
    <string name="center_shop_collect">店铺收藏</string>
    <string name="center_jilu">浏览记录</string>
    <string name="zanwushow">暂无更多Show</string>
    <string name="shopdetail_guanzhu">收藏人数</string>
    <string name="shopdetail_fangke">累计访客</string>
    <string name="shopdetail_total_goods">商品总数</string>
    <string name="shopdetail_zizhi">    查看    </string>
    <string name="shopdetail_jiaguanzhu">     +关注     </string>
    <string name="shopbus_all">全部商品</string>
    <string name="shopbus_lingshou">零售商品</string>
    <string name="shopbus_caigou">采购商品</string>
    <string name="shopbus_guige">规格: </string>
    <string name="buy">买</string>
    <string name="yijiandaimai">一键代买</string>
    <string name="fahuodi">发货地：</string>
    <string name="yunfei">运费：</string>
    <string name="sales">销量：</string>
    <string name="score">积分：</string>
    <string name="jianyilingshou">售价:</string>
    <string name="chakanshow">查看商品show</string>
    <string name="tuwendetail">宝贝详情</string>
    <string name="bank_card_manage">银行卡管理</string>
    <string name="alipay_manage">支付宝管理</string>
    <string name="sbumit_tixian">提现</string>
    <string name="property_detail">资金明细</string>
    <string name="lable_bank_card_numb">卡号：</string>
    <string name="lable_alipay_numb">支付宝账号</string>
    <string name="alipay_real_name">真实姓名：</string>
    <string name="i_agree_bank_transfer_agreement">已阅读并同意</string>
    <string name="bank_transfer">《银行转账授权协议》</string>
    <string name="txt_filter">筛选</string>
    <string name="add_bank_card">添加银行卡</string>
    <string name="select_bank">选择银行</string>
    <string name="lable_add_alipay">添加支付宝</string>
    <string name="please_select_bank">请选择银行</string>
    <string name="alipay_limit_time_money">00:00:00-23:59:59期间转出，支持5万额度</string>
    <string name="this_time_allow_transfer_money">本次最多可转出200.00元</string>
    <string name="alipay_money">金额</string>
    <string name="apply_withdraw_deposit">申请</string>
    <string name="alipay_account_txt">支付宝账户：</string>
    <string name="no_alipay_desc">您还没有绑定支付宝账户，快去绑定吧</string>
    <string name="alipay_real_name_format">真实姓名：%1$s</string>
    <string name="lable_alipay_numb_format">支付宝账号：%1$s</string>
    <string name="lable_bank_numb_format">尾号%1$s快捷</string>
    <string name="lable_bank_numb_format_1">(尾号%1$s)</string>
    <string name="property_detail_select_all">全部</string>
    <string name="property_detail_buy_good">购物</string>
    <string name="property_detail_top_up">退款</string>
    <string name="property_detail_withdraw">提现</string>
    <string name="property_detail_sell_record">销售</string>
    <string name="property_detail_usr_return">返佣</string>
    <string name="personal_data">个人资料</string>
    <string name="authentication">实名认证</string>
    <string name="address_manage">地址管理</string>
    <string name="account_safe">账户安全</string>
    <string name="about_w_town">关于微糖</string>
    <string name="txt_phone_numb">手机号</string>
    <string name="new_consignee_address">新建收货人地址</string>
    <string name="txt_save">保存</string>
    <string name="detail_address">详细地址</string>
    <string name="contact_phone_numb">联系电话</string>
    <string name="txt_consignee">收      货      人 </string>
    <string name="consignee_name">收货人姓名</string>
    <string name="enter_detail_address">请填写详细地址……</string>
    <string name="in_location">所在地区</string>
    <string name="reset_pwd">重置支付密码</string>
    <string name="set_pwd">设置支付密码</string>
    <string name="real_name">姓名</string>
    <string name="txt_enter_real_name">请填入真实姓名</string>
    <string name="id_numb">身份证</string>
    <string name="txt_enter_id_numb">请输入身份证号码</string>
    <string name="next_step">下一步</string>
    <string name="txt_enter_phone_numb">请输入手机号码</string>
    <string name="default_address">默认地址</string>
    <string name="txt_edit">编辑</string>
    <string name="txt_delete">删除</string>
    <string name="vido_error">视频播放出错请稍后重试</string>
    <string name="shop_data">我的资料</string>
    <string name="shop_icon">我的头像</string>
    <string name="shop_id">我的ID</string>
    <string name="long_click_copy">(通过ID号搜索到您的店铺，长按复制)</string>
    <string name="shop_cover">背景图</string>
    <string name="shop_another_name">昵称</string>
    <string name="shop_introduce">个性签名</string>
    <string name="goods_count">共%1$d件商品</string>
    <string name="good_price">￥%1$.2f</string>
    <string name="post_price">(含运费￥%1$.2f)</string>
    <string name="delete">删除</string>
    <string name="tv_commentview_name">" 收 货 人 ："</string>
    <string name="submit_real_auth">提交认证</string>
    <string name="login_realid_hint_name">请输入真实姓名</string>
    <string name="login_realid_hint_id">请输入身份证号</string>
    <string name="queding">确定</string>
    <string name="brand_join_confirm">提交</string>
    <string name="apply_proxy_rule">代理规则</string>
    <string name="introduce_youself">自我介绍</string>
    <string name="shop_souso">搜索</string>
    <string name="zonghe">综合</string>
    <string name="jiage">价格</string>
    <string name="jifen">积分</string>
    <string name="xiaoliang">销量</string>
    <string name="shaixuan">筛选</string>
    <string name="type">类别</string>
    <string name="price">价格</string>
    <string name="pinpai">品牌</string>
    <string name="chongzhi">重置</string>
</resources>