<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">
    <!-- title*** -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/titlebarheingh"
        android:background="@color/app_fen"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/new1"
            android:visibility="invisible"/>

        <RelativeLayout
            android:id="@+id/fragment_main_sort_sou_lay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/shap_sortsousou_bg"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:id="@+id/sort_good_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/shop_souso"
                android:textColor="@color/sousou_ed"
                android:textSize="15dp"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/sort_good_textView"


                android:src="@drawable/sousou"/>
        </RelativeLayout>

        <ImageView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/new1"/>
    </LinearLayout>
    <!-- title*** -->
    <io.vtown.WeiTangApp.comment.view.custom.horizontalscroll.HorizontalScrollMenu
        android:id="@+id/f_sort_goofd_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white">
        <TextView
            style="@style/style_sort_up_txt"
            android:id="@+id/sort_good_zonghe"
            android:text="@string/zonghe"
            android:textColor="@color/app_fen"
            />
        <TextView
            android:id="@+id/sort_good_price"
            style="@style/style_sort_up_txt"
            android:text="@string/jiage"
            android:textColor="@color/gray"/>

        <TextView
            android:id="@+id/sort_good_jifen"
            style="@style/style_sort_up_txt"
            android:text="@string/jifen"
            android:textColor="@color/gray"/>

        <TextView
            android:id="@+id/sort_good_xiaoliang"
            style="@style/style_sort_up_txt"
            android:text="@string/xiaoliang"
            android:textColor="@color/gray"/>

        <TextView
            android:id="@+id/sort_good_shaixuan"
            style="@style/style_sort_up_txt"
            android:text="@string/shaixuan"
            android:textColor="@color/gray"/>
    </LinearLayout>

</LinearLayout>
