<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >


    <LinearLayout
        android:layout_width="80dp"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_select_all"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@drawable/select_home_item"
            android:clickable="true"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/property_detail_select_all"
            android:textColor="@color/white" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="@color/white"
            />

        <TextView
            android:id="@+id/tv_buy_good"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@drawable/select_home_item"
            android:clickable="true"
            android:padding="5dp"
            android:gravity="center"
            android:text="@string/property_detail_buy_good"
            android:textColor="@color/white" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="@color/white"
            />

        <TextView
            android:id="@+id/tv_top_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:padding="5dp"
            android:background="@drawable/select_home_item"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/property_detail_top_up"
            android:textColor="@color/white" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="@color/white"
            />

        <TextView
            android:id="@+id/tv_withdraw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:padding="5dp"
            android:background="@drawable/select_home_item"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/property_detail_withdraw"
            android:textColor="@color/white" />


        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="@color/white"
            />
        <TextView
            android:id="@+id/tv_sell_record"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:background="@drawable/select_home_item"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/property_detail_sell_record"
            android:textColor="@color/white" />



    </LinearLayout>
    


</LinearLayout>