<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg"
    android:orientation="vertical" >

    <include layout="@layout/titlebar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <io.vtown.WeiTangApp.comment.view.custom.CompleteListView
                android:id="@+id/develop_junior_ls"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@color/transparent"
                android:dividerHeight="10dp"
                android:scrollbars="none" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="vertical"
                android:visibility="gone" >

                <EditText
                    android:id="@+id/et_enter_invite_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_add_goods_edit_bg"
                    android:hint="@string/shuru_initor_code"
                    android:inputType="phone"
                    android:padding="10dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/dingxian" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/bushuruerweimawei" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/transparent" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_produce_two_dimension_code"
        style="@style/build_two_dimension_code_btn_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/toerweima" 
        android:visibility="invisible"/>

</LinearLayout>