<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg"
    android:orientation="vertical" >
    
    <include layout="@layout/titlebar"/>
    
    <ScrollView 
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        
        >
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            
            >
            
            <TextView 
                android:id="@+id/tv_apply_proxy_rule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apply_proxy_rule"
                android:padding="10dp"
                android:visibility="gone"
                />
            
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/introduce_youself"
               android:padding="10dp"
               android:textColor="@color/grey"
                />
            
            <EditText 
                android:id="@+id/et_introduce_youself"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:gravity="left"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/shape_add_goods_edit_bg"
                />
        </LinearLayout>
        
    </ScrollView>
    
    <Button
        android:id="@+id/btn_apply_proxy_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/btnstyle"
        android:text="@string/brand_join_confirm"
        
        />
    

</LinearLayout>
