<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <include layout="@layout/titlebar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/realid_name_ed"
            style="@style/edit_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/login_realid_hint_name"
            android:lines="1"
            android:textColor="@color/gray" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_size1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/app_fen" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/realid_identityid_ed"
            style="@style/edit_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/login_realid_hint_id"
            android:inputType="phone" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_size1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/app_fen" />
    </LinearLayout>

    <TextView
        android:id="@+id/realid_submint_bt"
        style="@style/bt_textview_comment"
        android:layout_width="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/select_fen_to_gray"
        android:padding="10dp"
        android:text="@string/submit_real_auth" />

</LinearLayout>